chore: 1주차 초기 구조 완료 (HTML 골격/네비/Smart Tomcat 설정)

--- a/final/src/main/webapp/habit.html
+++ b/final/src/main/webapp/habit.html
@@ -1,2 +1,36 @@
-<!DOCTYPE html><html lang="ko"><head><meta charset="UTF-8"/><title>습관</title>
-  <link rel="stylesheet" href="css/style.css"/></head><body><h1>습관</h1></body></html>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8" />
+  <title>습관 | 일정관리 앱</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+<header>
+  <h1>습관(Habit)</h1>
+</header>
+
+<nav>
+  <a href="home.html">홈</a> |
+  <a href="onboarding.html">온보딩</a> |
+  <a href="todo.html">할 일</a> |
+  <a href="habit.html">습관</a> |
+  <a href="setting.html">설정</a>
+</nav>
+
+<main class="container">
+  <div class="card">
+    <p class="muted">예시 스트릭</p>
+    <div class="streak">
+      <span class="dot on"></span>
+      <span class="dot on"></span>
+      <span class="dot on"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot on"></span>
+      <span class="dot on"></span>
+    </div>
+  </div>
+</main>
+</body>
+</html>
