--- a/final/src/main/webapp/setting.html
+++ b/final/src/main/webapp/setting.html
@@ -1,2 +1,29 @@
-<!DOCTYPE html><html lang="ko"><head><meta charset="UTF-8"/><title>설정</title>
-  <link rel="stylesheet" href="css/style.css"/></head><body><h1>설정</h1></body></html>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8" />
+  <title>설정 | 일정관리 앱</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+<header>
+  <h1>설정</h1>
+</header>
+
+<nav>
+  <a href="home.html">홈</a> |
+  <a href="onboarding.html">온보딩</a> |
+  <a href="todo.html">할 일</a> |
+  <a href="habit.html">습관</a> |
+  <a href="setting.html">설정</a>
+</nav>
+
+<main class="container">
+  <div class="card">
+    <label>포인트 색상</label>
+    <input type="color" value="#4E73DF" />
+    <p class="muted">* 현재 단계는 정적 미리보기만 제공합니다.</p>
+  </div>
+</main>
+</body>
+</html>
