--- a/final/src/main/webapp/todo.html
+++ b/final/src/main/webapp/todo.html
@@ -1,2 +1,29 @@
-<!DOCTYPE html><html lang="ko"><head><meta charset="UTF-8"/><title>할 일</title>
-  <link rel="stylesheet" href="css/style.css"/></head><body><h1>할 일</h1></body></html>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8" />
+  <title>할 일 | 일정관리 앱</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+<header>
+  <h1>할 일(To-do)</h1>
+</header>
+
+<nav>
+  <a href="home.html">홈</a> |
+  <a href="onboarding.html">온보딩</a> |
+  <a href="todo.html">할 일</a> |
+  <a href="habit.html">습관</a> |
+  <a href="setting.html">설정</a>
+</nav>
+
+<main class="container">
+  <ul class="list">
+    <li><input type="checkbox" /> 와이어프레임 정리</li>
+    <li><input type="checkbox" /> 클래스 다이어그램 확정</li>
+    <li><input type="checkbox" /> HTML 골격 점검</li>
+  </ul>
+</main>
+</body>
+</html>
