--- a/final/src/main/webapp/home.html
+++ b/final/src/main/webapp/home.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8"/>
-  <title>홈</title>
-  <link rel="stylesheet" href="css/style.css"/>
+  <meta charset="UTF-8" />
+  <title>홈 | 일정관리 앱</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-<h1>일정관리 앱 홈</h1>
+<header>
+  <h1>오늘의 일정</h1>
+</header>
+
 <nav>
   <a href="home.html">홈</a> |
   <a href="onboarding.html">온보딩</a> |
@@ -14,6 +17,15 @@
   <a href="habit.html">습관</a> |
   <a href="setting.html">설정</a>
 </nav>
-<p>기본 골격 실행 확인 페이지</p>
+
+<main class="container">
+  <p class="muted">홈 화면입니다. 아래 버튼으로 이동하거나 상단 탭을 사용하세요.</p>
+  <div class="grid">
+    <a class="btn" href="onboarding.html">Onboarding</a>
+    <a class="btn" href="todo.html">To-do</a>
+    <a class="btn" href="habit.html">Habit</a>
+    <a class="btn" href="setting.html">Setting</a>
+  </div>
+</main>
 </body>
 </html>
